--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -1,28 +1,21 @@
 .App {
+  padding: 2vh 15vw;
+}
+
+.search-section {
+  display: flex;
+  flex-direction: column;
+}
+.search-bar {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
   text-align: center;
+  margin: 1rem;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.checkbox {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  margin: 1rem;
 }
